# csv-render

./: .gitignore  README.md  deepseek_text_20260423_dfd7be.txt  structure.md  table-acb06d12-2db0-4573-a690-44f47e67711a (1).csv  table-acb06d12-2db0-4573-a690-44f47e67711a (2).csv  table-acb06d12-2db0-4573-a690-44f47e67711a (3).csv  table-acb06d12-2db0-4573-a690-44f47e67711a.csv  table-c4df7887-9aa3-48f9-83b1-55ad3a4b7f49.csv
.github/workflows/: csv-lint.yml  rust-ci.yml
configs/: governance-particle-schema.yaml  neurorights-flags.toml  repo-index.yaml  risk-profiles.toml  titan-cross-invariants-2026v1.yaml  titan-metrics-schema.yaml  titanmetrics-risk-registry.csv
crates/csv-cli/src/: scan.rs
docs/: ai_generation_flows.csv  errorreport-schema.md  github_rendering_tips.md  prompt_engineering.md  rfc4180_guide.md
docs/contracts/: semantic-contracts.csv
docs/research_objects/: spec_artifacts.csv
examples/: broken_example.csv  tier1_guarantees.csv  valid_example.csv
failure_corpus/T2_TIME_RANGE_VIOLATION/case_01/: broken.csv  error_report.json  fixed.csv
invariants/: TitanCorridor2026v1.aln
python/: requirements.txt
python/converters/: csv_to_markdown.py
python/src/: csv_validator.py  repair_loop.py
rust/: Cargo.toml  clippy.toml  rustfmt.toml
rust/aln-core/src/: admission.rs  (+3 more)
rust/csv-cli/: Cargo.toml
rust/csv-cli/src/: index.rs  json_report.rs  main.rs  scan.rs  validation_inventory.rs
rust/csv-core/: Cargo.toml
rust/examples/: governance_particle.csv
rust/tests/: broken.csv  valid.csv
schemas/: TitanMetrics2026v1.aln
src/: risk.rs
(+11 files in other folders)
